添加首页默认动画，修复数据库bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">简记</string>
     <string name="Title">Simple Count</string>
     <string name="TitleString">Simple Count</string>
+    <string name="attentionStirng">请打开侧滑菜单添加账本</string>
 </resources>
